@@ -1,5 +1,8 @@
 2006-04-25  Matthias Clasen  <mclasen@redhat.com>
 
+	* tests/keyfile-test.c (test_comments): Add a test for
+	the previous change.
+
 	* glib/gkeyfile.c (g_key_file_lookup_group_node): Remove
 	redundant code.
 	(g_key_file_get_group_comment): Don't dereference before
